Fri May 09 02:00:03 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/,docs/overview.html,include/om/om.h,
	  include/xapian/enquire.h,include/xapian/output.h,matcher/,
	  net/socketclient.cc,net/socketcommon.cc,net/socketserver.cc,
	  netprogs/nettest.cc,tests/api_db.cc: OmRSet -> Xapian::RSet.

Fri May 09 01:06:32 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Fixed MSet::Internal::get_description() to include
	  class name.

Fri May 09 01:04:12 BST 2003  Olly Betts <olly@survex.com>

	* common/rset.h,matcher/expand.cc,matcher/rset.cc: RSetI now uses
	  set<Xapian::docid> (as OmRSet::Internal) rather than
	  vector<RSetItem>.

Fri May 09 00:41:20 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/,docs/quickstartexpand.cc.html,matcher/:
	  RSet internal class renamed to RSetI to aid upcoming OmRSet ->
	  Xapian::RSet change.  RSetI looks like it can be eliminated
	  later.

Thu May 08 23:54:44 BST 2003  Olly Betts <olly@survex.com>

	* tests/: Removed make_dbgrp() helper function from apitest as it
	  makes the test code less clear without making it easier to write.

Thu May 08 01:24:53 BST 2003  Olly Betts <olly@survex.com>

	* api/ompostlistiterator.cc,docs/overview.html,tests/api_db.cc:
	  Fixed OmWeight and OmMatchDecider in comments, docs, and
	  testsuite.

Thu May 08 01:16:30 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,backends/multi/multi_postlist.h,common/,
	  include/om/om.h,include/xapian/enquire.h,matcher/,
	  net/socketclient.cc,net/socketserver.cc: OmMatchDecider ->
	  Xapian::MatchDecider; OmWeight -> Xapian::Weight; BoolWeight,
	  TradWeight, BM25Weight -> Xapian::.

Wed May 07 23:06:47 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/btreetest.cc,backends/quartz/quartztest.cc,
	  configure.in,netprogs/nettest.cc,tests/,testsuite/: Minor overhaul
	  of testsuite.

Wed May 07 17:54:34 BST 2003  Olly Betts <olly@survex.com>
